[package]
name = "csv-helper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.3"
csv = "1.1"
cursive-async-view = "^0"
xlsxwriter = "0.3.5"
threadpool = "1.8.1"

[dependencies.cursive]
version = "0.17"
default-features = false
features = ["crossterm-backend"]